--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,43 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-04-14 09:17:06 -0400 
+%% Created for Sean Bittner at 2021-04-15 16:19:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{morris1981voltage,
+	author = {Morris, Catherine and Lecar, Harold},
+	date-added = {2021-04-15 16:19:45 -0400},
+	date-modified = {2021-04-15 16:19:45 -0400},
+	journal = {Biophysical journal},
+	number = {1},
+	pages = {193--213},
+	publisher = {Elsevier},
+	title = {Voltage oscillations in the barnacle giant muscle fiber},
+	volume = {35},
+	year = {1981}}
+
+@article{dayan2003theoretical,
+	author = {Dayan, Peter and Abbott, Laurence F and others},
+	date-added = {2021-04-15 13:39:38 -0400},
+	date-modified = {2021-04-15 13:39:38 -0400},
+	journal = {Journal of Cognitive Neuroscience},
+	number = {1},
+	pages = {154--155},
+	title = {Theoretical neuroscience: computational and mathematical modeling of neural systems},
+	volume = {15},
+	year = {2003}}
+
+@book{izhikevich2007dynamical,
+	author = {Izhikevich, Eugene M},
+	date-added = {2021-04-15 13:39:38 -0400},
+	date-modified = {2021-04-15 13:39:38 -0400},
+	publisher = {MIT press},
+	title = {Dynamical systems in neuroscience},
+	year = {2007}}
 
 @article{saleem2013integration,
 	author = {Saleem, Aman B and Ayaz, Asl{\i} and Jeffery, Kathryn J and Harris, Kenneth D and Carandini, Matteo},
